# termedit-ai

./: Cargo.toml  LICENSE  README.md  TESTING_GUIDE.md  curl.sh  file.py  patch.py  patch2.py  patch3.py
.github/workflows/: publish-crates-io.yml  release.yml
docs/: DEVELOPER.md
src/: app.rs  error.rs  main.rs
src/config/: embed.rs  keymap.rs  mod.rs  settings.rs  theme.rs
src/core/: buffer.rs  cursor.rs  document.rs  history.rs  mod.rs
src/feature/: ai_completion.rs  brackets.rs  completion.rs  gemini_chat.rs  git_worktree.rs  language.rs  mod.rs  outline.rs  search.rs  session.rs  syntax.rs
src/feature/ai_server/: apply.rs  cache.rs  context.rs  gemini.rs  mod.rs  prompt.rs  repl.rs  response.rs  summarize.rs  ui.rs
src/feature/ai_server/analyzers/: mod.rs
src/feature/ai_server/collect/: docker.rs  dotenv.rs  logs.rs  metrics.rs  mod.rs  nginx.rs  systemd.rs
src/feature/logs/: aggregation.rs  ai.rs  anomaly.rs  config.rs  mod.rs  parser.rs  query.rs  streamer.rs  ui.rs
src/feature/ssh/: client.rs  deploy.rs  mod.rs  sync.rs  ui.rs
src/feature/timeline/: mod.rs  models.rs  store.rs  ui.rs  worker.rs
src/ui/: ai_panel.rs  command_palette.rs  editor_pane.rs  file_tree.rs  mod.rs  modal.rs  open_tabs_palette.rs  outline_palette.rs  status_bar.rs  tab_bar.rs
