[package]
name = "termedit"
version = "0.1.0"
edition = "2021"
description = "A modern, nano-style terminal editor with session restore, AI ghost text, and professional shortcuts"
license = "MIT"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Text buffer
ropey = "1.6"

# Syntax highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP for AI completion
reqwest = { version = "0.12", features = ["blocking", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Search
regex = "1"

# System directories
dirs = "6"

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Clipboard
arboard = "3"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3.27.0"
