[package]
name = "termedit"
version = "0.1.2"
edition = "2021"
description = "A modern, nano-style terminal editor with session restore, AI ghost text, and professional shortcuts"
readme = "README.md"
keywords = ["editor", "terminal", "tui", "text-editor", "ratatui"]
categories = ["command-line-utilities", "text-editors"]
license = "MIT"
repository = "https://github.com/gokula-krishnan-r-dev/termedit-ai"
exclude = [
    ".DS_Store",
    "**/.DS_Store",
    "file.py",
    "curl.sh",
]

[features]
default = ["ai", "outline", "clipboard"]
full = ["ai", "outline", "clipboard"]
ai = ["dep:ureq"]
outline = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
]
clipboard = ["dep:arboard"]

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Text buffer
ropey = "1.6"

# Syntax highlighting
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP for AI completion (blocking; avoids async stack)
ureq = { version = "2", features = ["json"], optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Search
regex = "1"

# System directories
dirs = "6"

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Clipboard
arboard = { version = "3", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
# Size vs speed: "z" minimizes binary size; 3 favors editor redraw throughput. LTO + strip keep releases lean.
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3.27.0"
