[package]
name = "termedit"
version = "0.1.5"
edition = "2021"
description = "A modern, nano-style terminal editor with session restore, AI ghost text, and professional shortcuts"
readme = "README.md"
keywords = ["editor", "terminal", "tui", "text-editor", "ratatui"]
categories = ["command-line-utilities", "text-editors"]
license = "MIT"
repository = "https://github.com/gokula-krishnan-r-dev/termedit-ai"
exclude = [
    ".DS_Store",
    "**/.DS_Store",
    "file.py",
    "curl.sh",
]

[features]
default = ["ai", "outline", "clipboard"]
full = ["ai", "outline", "clipboard", "ai-server", "logs", "timeline", "ssh"]
ai = ["dep:ureq"]
ai-server = [
    "ai",
    "dep:tokio",
    "dep:reqwest",
    "dep:walkdir",
    "dep:sysinfo",
    "dep:dialoguer",
    "dep:indicatif",
    "dep:similar",
    "dep:sha2",
    "dep:diffy",
    "dep:async-trait",
]
logs = [
    "dep:tokio",
    "dep:chrono",
    "dep:notify",
    "dep:ureq",
]
timeline = [
    "dep:tokio",
    "dep:chrono",
    "dep:similar",
]
outline = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
]
clipboard = ["dep:arboard"]
ssh = [
    "dep:tokio",
    "dep:openssh",
    "dep:openssh-sftp-client",
    "dep:diffy",
    "dep:tempfile",
]

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Text buffer
ropey = "1.6"

# Syntax highlighting
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP for AI completion (blocking; avoids async stack)
ureq = { version = "2", features = ["json"], optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Search
regex = "1"

# System directories
dirs = "6"

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Clipboard
arboard = { version = "3", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# AI server context mode (optional)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
walkdir = { version = "2", optional = true }
sysinfo = { version = "0.33", optional = true }
dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }
similar = { version = "2", optional = true }
sha2 = { version = "0.10", optional = true }
diffy = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }

# Smart Log Explorer (optional)
chrono = { version = "0.4", features = ["serde"], optional = true }
notify = { version = "6", optional = true }
openssh = { version = "0.10", optional = true }
openssh-sftp-client = { version = "0.14", optional = true }
tempfile = { version = "3.10", optional = true }
bytes = "1.11.1"

[profile.release]
# Size vs speed: "z" minimizes binary size; 3 favors editor redraw throughput. LTO + strip keep releases lean.
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3.27.0"
